[tool.poetry]
name = "quickdump"
version = "0.2.0"
description = "Quickly store arbitrary Python objects in unique files."
keywords = ["quickdump", "dump", "serialize", "store"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/pedrovhb/quickdump"
repository = "https://github.com/pedrovhb/quickdump"
authors = ["Pedro Batista <pedrovhb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
zstandard = "^0.16"
dill = "^0.3.4"
python-ulid = "^1.0.3"
pydantic = "^1.9.0"
loguru = "^0.6.0"

starlette = {version = "^0.19.0", extras = ["server"]}
uvicorn = {version = "^0.17.6", extras = ["server"]}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.941"

[tool.poetry.scripts]
server = "quickdump.server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
